--- a/hidrocarburos.html
+++ b/hidrocarburos.html
@@ -66,9 +66,9 @@
 <div id="main-wrapper">
 <section id="main">
 <header id="nodeDecoration"><h1 id="nodeTitle">Hidrocarburos</h1></header>
-<article class="iDevice_wrapper textIdevice em_iDevice" id="id18">
+<article class="iDevice_wrapper textIdevice em_iDevice em_iDevice_info_black" id="id18">
 <div class="iDevice emphasis1" >
-<header class="iDevice_header iDevice_header_noIcon"><h1 class="iDeviceTitle">Clasificación de los hidrocarburos</h1></header>
+<header class="iDevice_header" style="background-image:url(icon_info_black.png)"><h1 class="iDeviceTitle">Clasificación de los hidrocarburos</h1></header>
 <div class="iDevice_inner">
 <div class="iDevice_content_wrapper">
 <div id="ta18_127_2" class="block iDevice_content">
