--- a/actividades0.html
+++ b/actividades0.html
@@ -196,6 +196,21 @@
 </div>
 </div>
 </article>
+<article class="iDevice_wrapper textIdevice" id="id92">
+<div class="iDevice emphasis0" >
+<div id="ta92_128_2" class="block iDevice_content">
+<div class="exe-text"><h3>Actividad: Construcción de hidrocarburos</h3>
+<p>Dibuja las siguientes moléculas en el editor molecular:</p>
+<ol>
+<li>Etano (alcano)</li>
+<li>Eteno (alqueno)</li>
+<li>Etino (alquino)</li>
+<li>Benceno (aromático)</li>
+</ol>
+<p><iframe width="900" height="600" style="border: 1px solid #ccc; border-radius: 8px;" src="ketcher/ketcher.html"></iframe></p></div>
+</div>
+</div>
+</article>
 <div id="packageLicense" class="cc cc-by-sa">
 <p><span>Obra publicada con</span> <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Licencia Creative Commons Reconocimiento Compartir igual 4.0</a></p>
 </div>
