--- a/actividades1.html
+++ b/actividades1.html
@@ -66,10 +66,75 @@
 <div id="main-wrapper">
 <section id="main">
 <header id="nodeDecoration"><h1 id="nodeTitle">Actividades</h1></header>
-<article class="iDevice_wrapper textIdevice" id="id67">
+<article class="iDevice_wrapper textIdevice" id="id92">
 <div class="iDevice emphasis0" >
-<div id="ta67_174_2" class="block iDevice_content">
-<div class="exe-text"><p>Wordwall incrustracion css html que sean interactivas y retroalimentacion </p></div>
+<div id="ta92_128_2" class="block iDevice_content">
+<div class="exe-text"><div style="max-width: 950px; margin: 0 auto; padding: 20px; font-family: Arial, sans-serif; line-height: 1.6;">
+<h2 style="text-align: center; color: #2c3e50;"> Actividad: Construcción de Hidrocarburos</h2>
+<p style="text-align: justify;">A continuación encontrarás <strong>cuatro editores moleculares independientes</strong>. En cada uno deberás dibujar la molécula solicitada según la nomenclatura IUPAC. Recuerda que este editor no usa estructura de Lewis, sino un sistema de <em>dibujo químico en 2D</em>.</p>
+<h3 style="color: #34495e; text-align: center;"> Instrucciones generales de uso</h3>
+<ul>
+<li>Antes de comenzar, haz clic en <b>Clear Editor</b> (parte inferior del editor) para borrar la molécula inicial.</li>
+<li>Haz clic en el <b>átomo de carbono (C)</b> en la barra de herramientas para empezar a colocar carbonos.</li>
+<li>Haz clic sobre un enlace para convertirlo en <b>doble</b> o <b>triple</b>.</li>
+<li>Usa el ícono del <b>anillo de benceno</b> para dibujar compuestos aromáticos.</li>
+<li>Los <b>hidrógenos</b> se añaden automáticamente según la valencia del carbono.</li>
+<li>Si cometes un error, utiliza la herramienta <b>borrador</b> (eraser).</li>
+</ul>
+<!-- Etano -->
+<h3 style="color: #34495e;">Dibuja el Butano (alcano, enlaces simples)</h3>
+<div style="display: flex; justify-content: center; margin: 20px 0;"><iframe width="900" height="600" style="border: 2px solid #2c3e50; border-radius: 10px; box-shadow: 0 4px 12px rgba(0,0,0,0.15);" src="https://jsme-editor.github.io/dist/JSME_test.html">
+    </iframe></div>
+<!-- Eteno -->
+<h3 style="color: #34495e;">Dibuja el Propeno (alqueno, un doble enlace C=C)</h3>
+<div style="display: flex; justify-content: center; margin: 20px 0;"><iframe width="900" height="600" style="border: 2px solid #2c3e50; border-radius: 10px; box-shadow: 0 4px 12px rgba(0,0,0,0.15);" src="https://jsme-editor.github.io/dist/JSME_test.html">
+    </iframe></div>
+<!-- Etino -->
+<h3 style="color: #34495e;">Dibuja el 2-Pentino (alquino, un triple enlace C≡C)</h3>
+<div style="display: flex; justify-content: center; margin: 20px 0;"><iframe width="900" height="600" style="border: 2px solid #2c3e50; border-radius: 10px; box-shadow: 0 4px 12px rgba(0,0,0,0.15);" src="https://jsme-editor.github.io/dist/JSME_test.html">
+    </iframe></div>
+<!-- Benceno -->
+<h3 style="color: #34495e;">Dibuja el Bromobenceno (aromático, anillo conjugado)</h3>
+<div style="display: flex; justify-content: center; margin: 20px 0;"><iframe width="900" height="600" style="border: 2px solid #2c3e50; border-radius: 10px; box-shadow: 0 4px 12px rgba(0,0,0,0.15);" src="https://jsme-editor.github.io/dist/JSME_test.html">
+    </iframe></div>
+<p style="font-size: 14px; text-align: center; color: #7f8c8d;">💡 Recuerda: el tipo de enlace (simple, doble, triple o aromático) es el que determina si un hidrocarburo es <i>alcano</i>, <i>alqueno</i>, <i>alquino</i> o <i>aromático</i>.</p>
+</div></div>
+</div>
+</div>
+</article>
+<article class="iDevice_wrapper textIdevice" id="id93">
+<div class="iDevice emphasis0" >
+<div id="ta93_127_2" class="block iDevice_content">
+<div class="exe-text"><div style="max-width: 950px; margin: 0 auto; padding: 20px; font-family: Arial, sans-serif; line-height: 1.6;">
+<h2 style="text-align: center; color: #2c3e50;"> Actividad exploratoria: Diseña tu propio hidrocarburo</h2>
+<p style="text-align: justify;">Utiliza el editor molecular para <strong>crear un hidrocarburo de tu elección</strong>. Recuerda aplicar las reglas básicas de la química orgánica al momento de construirlo.</p>
+<h3 style="color: #34495e; text-align: center;"> Reglas básicas a tener en cuenta</h3>
+<ul>
+<li>Los átomos de <b>carbono</b> siempre cumplen la tetravalencia (4 enlaces).</li>
+<li>Los <b>hidrógenos</b> se agregan automáticamente según la valencia del carbono.</li>
+<li>Un enlace puede ser <b>simple (–)</b>, <b>doble (=)</b> o <b>triple (≡)</b>.</li>
+<li>Las moléculas deben ser <b>estables</b> (sin carbonos con más de 4 enlaces).</li>
+<li>Puedes usar cadenas lineales, ramificadas o estructuras cíclicas (anillos).</li>
+<li>Los compuestos aromáticos (como el benceno) tienen un sistema conjugado de dobles enlaces.</li>
+</ul>
+<div style="display: flex; justify-content: center; margin: 20px 0;"><iframe width="900" height="600" style="border: 2px solid #2c3e50; border-radius: 10px; box-shadow: 0 4px 12px rgba(0,0,0,0.15);" src="https://biomodel.uah.es/en/DIY/JSME/draw.es.htm">
+    </iframe></div>
+<h3 style="color: #34495e;"> Indicaciones de la actividad</h3>
+<p>- Diseña una molécula cumpliendo con las reglas de valencia y estabilidad. <br />- Una vez terminada, observa su fórmula y compárala con lo que sabes de la nomenclatura IUPAC. <br />- Reflexiona: ¿tu molécula es un alcano, alqueno, alquino o aromático? <br />- Explica por qué, en función del tipo de enlace que utilizaste.</p>
+<p style="font-size: 14px; text-align: center; color: #7f8c8d;"></p>
+</div></div>
+</div>
+</div>
+</article>
+<article class="iDevice_wrapper textIdevice em_iDevice" id="id112">
+<div class="iDevice emphasis1" >
+<header class="iDevice_header iDevice_header_noIcon"><h1 class="iDeviceTitle">Juego Interactivo</h1></header>
+<div class="iDevice_inner">
+<div class="iDevice_content_wrapper">
+<div id="ta112_144_2" class="block iDevice_content">
+<div class="exe-text"><p><iframe width="1200" height="600" style="max-width: 100%;" src="https://wordwall.net/es/embed/1d6a6c9151014c4bbe66c4a3a59cffff?themeId=1&amp;templateId=3&amp;fontStackId=0" frameborder="0" allowfullscreen="allowfullscreen"></iframe></p></div>
+</div>
+</div>
 </div>
 </div>
 </article>
