ACTUALIZACION ASISTENTE VIRTUAL

--- a/actividad0.html
+++ b/actividad0.html
@@ -56,11 +56,16 @@
       <li id="active"><a href="actividad0.html" class="active no-ch">Actividad</a></li>
    </ul>
    </li>
+   <li><a href="asistente_virtual.html" class="daddy">Asistente Virtual</a>
+   <ul class="other-section">
+      <li><a href="seccin.html" class="no-ch">Sección</a></li>
+   </ul>
+   </li>
 </ul>
 </nav>
 <div id='topPagination'>
 <nav class="pagination noprt">
-<a href="materiales3.html" class="prev"><span><span>&laquo; </span>Anterior</span></a>
+<a href="materiales3.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="asistente_virtual.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </nav>
 </div>
 <div id="main-wrapper">
@@ -86,7 +91,7 @@
 </div>
 <div id='bottomPagination'>
 <nav class="pagination noprt">
-<a href="materiales3.html" class="prev"><span><span>&laquo; </span>Anterior</span></a>
+<a href="materiales3.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="asistente_virtual.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </nav>
 </div>
 <footer id="siteFooter">Daniel Ruiz Lopez, Lauren Gonzalez y Lorena Laiton 
