--- a/asistente_virtual.html
+++ b/asistente_virtual.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="content.css" />
 <link rel="stylesheet" type="text/css" href="nav.css" />
 <meta http-equiv="content-type" content="text/html;  charset=utf-8" />
-<title>Impacto ambiental y social | Entre carbonos y saberes v1.0 </title>
+<title>Asistente Virtual | Entre carbonos y saberes v1.0 </title>
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 <meta name="author" content="Daniel Ruiz Lopez" />
 <link rel="license" type="text/html" href="http://creativecommons.org/licenses/by-sa/4.0/" />
@@ -16,7 +16,7 @@
 <script type="text/javascript" src="common.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
-<body class="exe-web-site" id="exe-node-5"><script type="text/javascript">document.body.className+=" js"</script>
+<body class="exe-web-site" id="exe-node-32"><script type="text/javascript">document.body.className+=" js"</script>
 <div id="content">
 <p id="skipNav"><a href="#main" class="sr-av">Saltar la navegación</a></p>
 <header id="header" ><div id="headerContent">Entre carbonos y saberes v1.0</div></header>
@@ -50,14 +50,14 @@
       <li><a href="actividad.html" class="no-ch">Actividad</a></li>
    </ul>
    </li>
-   <li id="active"><a href="impacto_ambiental_y_social.html" class="active daddy">Impacto ambiental y social</a>
-   <ul>
+   <li><a href="impacto_ambiental_y_social.html" class="daddy">Impacto ambiental y social</a>
+   <ul class="other-section">
       <li><a href="materiales3.html" class="no-ch">Materiales</a></li>
       <li><a href="actividad0.html" class="no-ch">Actividad</a></li>
    </ul>
    </li>
-   <li><a href="asistente_virtual.html" class="daddy">Asistente Virtual</a>
-   <ul class="other-section">
+   <li id="active"><a href="asistente_virtual.html" class="active daddy">Asistente Virtual</a>
+   <ul>
       <li><a href="seccin.html" class="no-ch">Sección</a></li>
    </ul>
    </li>
@@ -65,20 +65,50 @@
 </nav>
 <div id='topPagination'>
 <nav class="pagination noprt">
-<a href="actividad.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="materiales3.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="actividad0.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="seccin.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </nav>
 </div>
 <div id="main-wrapper">
 <section id="main">
-<header id="nodeDecoration"><h1 id="nodeTitle">Impacto ambiental y social</h1></header>
-<article class="iDevice_wrapper textIdevice em_iDevice" id="id63">
+<header id="nodeDecoration"><h1 id="nodeTitle">Asistente Virtual</h1></header>
+<article class="iDevice_wrapper textIdevice em_iDevice" id="id116">
 <div class="iDevice emphasis1" >
-<header class="iDevice_header iDevice_header_noIcon"><h1 class="iDeviceTitle">pRESENTACION DE LA TEMATICA </h1></header>
+<header class="iDevice_header iDevice_header_noIcon"><h1 class="iDeviceTitle">Asistente Virtal del Ambiente de Aprendizaje</h1></header>
 <div class="iDevice_inner">
 <div class="iDevice_content_wrapper">
-<div id="ta63_170_2" class="block iDevice_content">
-<div class="exe-text"><p>OBJETIVO</p>
-<p>DESARROLLO TEORICO </p></div>
+<div id="ta116_127_2" class="block iDevice_content">
+<div class="exe-text"><style>
+.chatframe-wrapper {
+  display: flex;
+  justify-content: center; /* centra horizontalmente */
+  align-items: center;     /* (opcional) centra verticalmente dentro del contenedor padre */
+  padding: 20px;            /* espacio alrededor */
+  background-color: #f9f9f9; /* color de fondo suave */
+}
+
+.chatframe-container {
+  width: 100%;
+  max-width: 1200px;
+  position: relative;
+  padding-top: 50%;  /* relación 2:1 (600 / 1200 = 0.5 = 50%) */
+  background: #fff;
+  border-radius: 8px;            /* bordes redondeados */
+  box-shadow: 0 4px 12px rgba(0,0,0,0.1);  /* sombra suave */
+  overflow: hidden;
+}
+
+.chatframe-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: none;
+}
+</style>
+<div class="chatframe-wrapper">
+<div class="chatframe-container"><iframe width="300" height="150" src="https://www.agenthost.ai/chat/elsuciodan17-github-io?embed=true&amp;hide_sidebar=true" allowfullscreen="allowfullscreen"></iframe></div>
+</div></div>
 </div>
 </div>
 </div>
@@ -91,7 +121,7 @@
 </div>
 <div id='bottomPagination'>
 <nav class="pagination noprt">
-<a href="actividad.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="materiales3.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="actividad0.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="seccin.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </nav>
 </div>
 <footer id="siteFooter">Daniel Ruiz Lopez, Lauren Gonzalez y Lorena Laiton 
