--- a/seccin.html
+++ b/seccin.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="content.css" />
 <link rel="stylesheet" type="text/css" href="nav.css" />
 <meta http-equiv="content-type" content="text/html;  charset=utf-8" />
-<title>Impacto ambiental y social | Entre carbonos y saberes v1.0 </title>
+<title>Sección | Entre carbonos y saberes v1.0 </title>
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 <meta name="author" content="Daniel Ruiz Lopez" />
 <link rel="license" type="text/html" href="http://creativecommons.org/licenses/by-sa/4.0/" />
@@ -16,7 +16,7 @@
 <script type="text/javascript" src="common.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
-<body class="exe-web-site" id="exe-node-5"><script type="text/javascript">document.body.className+=" js"</script>
+<body class="exe-web-site" id="exe-node-33"><script type="text/javascript">document.body.className+=" js"</script>
 <div id="content">
 <p id="skipNav"><a href="#main" class="sr-av">Saltar la navegación</a></p>
 <header id="header" ><div id="headerContent">Entre carbonos y saberes v1.0</div></header>
@@ -50,40 +50,27 @@
       <li><a href="actividad.html" class="no-ch">Actividad</a></li>
    </ul>
    </li>
-   <li id="active"><a href="impacto_ambiental_y_social.html" class="active daddy">Impacto ambiental y social</a>
-   <ul>
+   <li><a href="impacto_ambiental_y_social.html" class="daddy">Impacto ambiental y social</a>
+   <ul class="other-section">
       <li><a href="materiales3.html" class="no-ch">Materiales</a></li>
       <li><a href="actividad0.html" class="no-ch">Actividad</a></li>
    </ul>
    </li>
-   <li><a href="asistente_virtual.html" class="daddy">Asistente Virtual</a>
-   <ul class="other-section">
-      <li><a href="seccin.html" class="no-ch">Sección</a></li>
+   <li class="current-page-parent"><a href="asistente_virtual.html" class="current-page-parent daddy">Asistente Virtual</a>
+   <ul>
+      <li id="active"><a href="seccin.html" class="active no-ch">Sección</a></li>
    </ul>
    </li>
 </ul>
 </nav>
 <div id='topPagination'>
 <nav class="pagination noprt">
-<a href="actividad.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="materiales3.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="asistente_virtual.html" class="prev"><span><span>&laquo; </span>Anterior</span></a>
 </nav>
 </div>
 <div id="main-wrapper">
 <section id="main">
-<header id="nodeDecoration"><h1 id="nodeTitle">Impacto ambiental y social</h1></header>
-<article class="iDevice_wrapper textIdevice em_iDevice" id="id63">
-<div class="iDevice emphasis1" >
-<header class="iDevice_header iDevice_header_noIcon"><h1 class="iDeviceTitle">pRESENTACION DE LA TEMATICA </h1></header>
-<div class="iDevice_inner">
-<div class="iDevice_content_wrapper">
-<div id="ta63_170_2" class="block iDevice_content">
-<div class="exe-text"><p>OBJETIVO</p>
-<p>DESARROLLO TEORICO </p></div>
-</div>
-</div>
-</div>
-</div>
-</article>
+<header id="nodeDecoration"><h1 id="nodeTitle">Sección</h1></header>
 <div id="packageLicense" class="cc cc-by-sa">
 <p><span>Obra publicada con</span> <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Licencia Creative Commons Reconocimiento Compartir igual 4.0</a></p>
 </div>
@@ -91,7 +78,7 @@
 </div>
 <div id='bottomPagination'>
 <nav class="pagination noprt">
-<a href="actividad.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="materiales3.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="asistente_virtual.html" class="prev"><span><span>&laquo; </span>Anterior</span></a>
 </nav>
 </div>
 <footer id="siteFooter">Daniel Ruiz Lopez, Lauren Gonzalez y Lorena Laiton 
