--- a/asistente_virtual.html
+++ b/asistente_virtual.html
@@ -56,16 +56,12 @@
       <li><a href="actividad0.html" class="no-ch">Actividad</a></li>
    </ul>
    </li>
-   <li id="active"><a href="asistente_virtual.html" class="active daddy">Asistente Virtual</a>
-   <ul>
-      <li><a href="seccin.html" class="no-ch">Sección</a></li>
-   </ul>
-   </li>
+   <li id="active"><a href="asistente_virtual.html" class="active no-ch">Asistente Virtual</a></li>
 </ul>
 </nav>
 <div id='topPagination'>
 <nav class="pagination noprt">
-<a href="actividad0.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="seccin.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="actividad0.html" class="prev"><span><span>&laquo; </span>Anterior</span></a>
 </nav>
 </div>
 <div id="main-wrapper">
@@ -78,36 +74,40 @@
 <div class="iDevice_content_wrapper">
 <div id="ta116_127_2" class="block iDevice_content">
 <div class="exe-text"><style>
-.chatframe-wrapper {
-  display: flex;
-  justify-content: center; /* centra horizontalmente */
-  align-items: center;     /* (opcional) centra verticalmente dentro del contenedor padre */
-  padding: 20px;            /* espacio alrededor */
-  background-color: #f9f9f9; /* color de fondo suave */
-}
+  html, body {
+    height: 100%;
+    margin: 0;
+  }
+  .chatframe-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    background-color: #f9f9f9;
+  }
 
-.chatframe-container {
-  width: 100%;
-  max-width: 1200px;
-  position: relative;
-  padding-top: 50%;  /* relación 2:1 (600 / 1200 = 0.5 = 50%) */
-  background: #fff;
-  border-radius: 8px;            /* bordes redondeados */
-  box-shadow: 0 4px 12px rgba(0,0,0,0.1);  /* sombra suave */
-  overflow: hidden;
-}
+  .chatframe-container {
+    width: 100%;
+    max-width: 1200px;
+    position: relative;
+    padding-top: 50%;  /* proporción 2:1 */
+    background: #fff;
+    border-radius: 8px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+  }
 
-.chatframe-container iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border: none;
-}
+  .chatframe-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: none;
+  }
 </style>
 <div class="chatframe-wrapper">
-<div class="chatframe-container"><iframe width="300" height="150" src="https://www.agenthost.ai/chat/elsuciodan17-github-io?embed=true&amp;hide_sidebar=true" allowfullscreen="allowfullscreen"></iframe></div>
+<div class="chatframe-container"><iframe width="300" height="150" src="https://www.agenthost.ai/chat/iacarbonosysaberes?embed=true&amp;hide_sidebar=true" allowfullscreen="allowfullscreen"></iframe></div>
 </div></div>
 </div>
 </div>
@@ -121,7 +121,7 @@
 </div>
 <div id='bottomPagination'>
 <nav class="pagination noprt">
-<a href="actividad0.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="seccin.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="actividad0.html" class="prev"><span><span>&laquo; </span>Anterior</span></a>
 </nav>
 </div>
 <footer id="siteFooter">Daniel Ruiz Lopez, Lauren Gonzalez y Lorena Laiton 
