--- a/materiales1.html
+++ b/materiales1.html
@@ -56,11 +56,7 @@
       <li><a href="actividad0.html" class="no-ch">Actividad</a></li>
    </ul>
    </li>
-   <li><a href="asistente_virtual.html" class="daddy">Asistente Virtual</a>
-   <ul class="other-section">
-      <li><a href="seccin.html" class="no-ch">Sección</a></li>
-   </ul>
-   </li>
+   <li><a href="asistente_virtual.html" class="no-ch">Asistente Virtual</a></li>
 </ul>
 </nav>
 <div id='topPagination'>
