--- a/materiales.html
+++ b/materiales.html
@@ -67,11 +67,13 @@
 <div id="main-wrapper">
 <section id="main">
 <header id="nodeDecoration"><h1 id="nodeTitle">Materiales</h1></header>
-<article class="iDevice_wrapper textIdevice" id="id25">
-<div class="iDevice emphasis0" >
+<article class="iDevice_wrapper textIdevice em_iDevice" id="id25">
+<div class="iDevice emphasis1" >
+<header class="iDevice_header iDevice_header_noIcon"><h1 class="iDeviceTitle">🎥 Recapitulación visual</h1></header>
+<div class="iDevice_inner">
+<div class="iDevice_content_wrapper">
 <div id="ta25_134_2" class="block iDevice_content">
-<div class="exe-text"><div style="padding: 20px; font-family: Arial, sans-serif;">
-<h3 style="color: #0d47a1; margin-top: 0px; text-align: center;">🎥 Recapitulación visual</h3>
+<div class="exe-text"><div style="padding: 20px; font-family: Arial, sans-serif;"><br />
 <p style="text-align: center; font-size: 15px; color: #333; margin-bottom: 20px;">Con <strong>solo 6 minutos</strong> de videos puedes reforzar lo aprendido sobre la <strong>definición, clasificación y ejemplos de los hidrocarburos</strong>. Una forma rápida y visual de repasar la sección anterior.</p>
 <!-- Contenedor flexible de las tarjetas -->
 <div style="display: flex; flex-wrap: wrap; gap: 20px; justify-content: center;"><!-- Tarjeta Video 1 -->
@@ -96,10 +98,12 @@
 </div></div>
 </div>
 </div>
+</div>
+</div>
 </article>
-<article class="iDevice_wrapper textIdevice em_iDevice" id="id31">
+<article class="iDevice_wrapper textIdevice em_iDevice em_iDevice_assignment_list_black" id="id31">
 <div class="iDevice emphasis1" >
-<header class="iDevice_header iDevice_header_noIcon"><h1 class="iDeviceTitle">Infografia de Hidrocarburos Aromáticos</h1></header>
+<header class="iDevice_header" style="background-image:url(icon_assignment_list_black.png)"><h1 class="iDeviceTitle">Infografia de Hidrocarburos Aromáticos</h1></header>
 <div class="iDevice_inner">
 <div class="iDevice_content_wrapper">
 <div id="ta31_140_2" class="block iDevice_content">
