--- a/materiales0.html
+++ b/materiales0.html
@@ -67,8 +67,11 @@
 <div id="main-wrapper">
 <section id="main">
 <header id="nodeDecoration"><h1 id="nodeTitle">Materiales</h1></header>
-<article class="iDevice_wrapper textIdevice" id="id109">
-<div class="iDevice emphasis0" >
+<article class="iDevice_wrapper textIdevice em_iDevice" id="id109">
+<div class="iDevice emphasis1" >
+<header class="iDevice_header iDevice_header_noIcon"><h1 class="iDeviceTitle">Nomenclatura Orgánica IUPAC</h1></header>
+<div class="iDevice_inner">
+<div class="iDevice_content_wrapper">
 <div id="ta109_141_2" class="block iDevice_content">
 <div class="exe-text"><p></p>
 <style>
@@ -463,10 +466,8 @@
             .history-content {
                 grid-template-columns: 1fr;
             }
-        }
-    </style>
+        }</style>
 <div class="container"><header>
-<h1>Nomenclatura Orgánica IUPAC</h1>
 <h2>Material educativo completo para el aprendizaje de la nomenclatura de hidrocarburos</h2>
 </header>
 <div class="history-section">
@@ -649,6 +650,8 @@
 <p>Material Educativo de Nomenclatura Orgánica IUPAC | Reglas IUPAC para alcanos, alquenos, alquinos y aromáticos</p>
 </div>
 </div></div>
+</div>
+</div>
 </div>
 </div>
 </article>
