--- a/nomenclatura.html
+++ b/nomenclatura.html
@@ -296,11 +296,13 @@
 </div>
 </div>
 </article>
-<article class="iDevice_wrapper textIdevice" id="id107">
-<div class="iDevice emphasis0" >
+<article class="iDevice_wrapper textIdevice em_iDevice" id="id107">
+<div class="iDevice emphasis1" >
+<header class="iDevice_header iDevice_header_noIcon"><h1 class="iDeviceTitle">🌍 Elementos base en la formación de compuestos orgánicos</h1></header>
+<div class="iDevice_inner">
+<div class="iDevice_content_wrapper">
 <div id="ta107_139_2" class="block iDevice_content">
-<div class="exe-text"><div style="max-width: 1100px; margin: 0 auto; font-family: Arial, sans-serif; line-height: 1.6;">
-<h2 style="text-align: center; color: #2c3e50; margin-bottom: 20px;">🌍 Elementos base en la formación de compuestos orgánicos</h2>
+<div class="exe-text"><div style="max-width: 1100px; margin: 0 auto; font-family: Arial, sans-serif; line-height: 1.6;"><br />
 <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px;"><!-- Carbono -->
 <div style="background: #fff5f5; border: 2px solid #e07a7a; border-radius: 12px; padding: 16px; box-shadow: 0 6px 16px rgba(224,122,122,0.2);">
 <h3 style="text-align: center; color: #a83232; margin-bottom: 12px;"> Carbono</h3>
@@ -321,9 +323,14 @@
 </div></div>
 </div>
 </div>
+</div>
+</div>
 </article>
-<article class="iDevice_wrapper textIdevice" id="id108">
-<div class="iDevice emphasis0" >
+<article class="iDevice_wrapper textIdevice em_iDevice em_iDevice_assignment_list_black" id="id108">
+<div class="iDevice emphasis1" >
+<header class="iDevice_header" style="background-image:url(icon_assignment_list_black.png)"><h1 class="iDeviceTitle">Nomenclatura de Hidrocarburos según la IUPAC</h1></header>
+<div class="iDevice_inner">
+<div class="iDevice_content_wrapper">
 <div id="ta108_140_2" class="block iDevice_content">
 <div class="exe-text"><p></p>
 <style>
@@ -435,7 +442,6 @@
 <div class="nomenclatura-container">
 <div class="layout"><!-- COLUMNA IZQUIERDA: TEXTO DE NOMENCLATURA -->
 <section>
-<h2>Nomenclatura de Hidrocarburos según la IUPAC</h2>
 <p>La nomenclatura IUPAC para hidrocarburos se basa en reglas específicas para nombrar cadenas de carbono e hidrógeno en alcanos, alquenos, alquinos y compuestos aromáticos.</p>
 <h3>1. Selección de la cadena principal</h3>
 <p>La cadena principal es la cadena continua más larga de átomos de carbono que contiene el grupo funcional principal (saturado o insaturado).</p>
@@ -500,6 +506,8 @@
 </aside>
 </div>
 </div></div>
+</div>
+</div>
 </div>
 </div>
 </article>
