--- a/representacin.html
+++ b/representacin.html
@@ -81,6 +81,34 @@
 </div>
 </div>
 </article>
+<article class="iDevice_wrapper textIdevice em_iDevice em_iDevice_info_black" id="id122">
+<div class="iDevice emphasis1" >
+<header class="iDevice_header" style="background-image:url(icon_info_black.png)"><h1 class="iDeviceTitle">Representación de Hidrocarburos</h1></header>
+<div class="iDevice_inner">
+<div class="iDevice_content_wrapper">
+<div id="ta122_130_2" class="block iDevice_content">
+<div class="exe-text"><hr />
+<p style="text-align: center;"><span style="font-size: 14pt;"><em><strong><span style="color: #ff0000;">Objetivo</span> Identificar y diferenciar las distintas formas de representación de hidrocarburos, aplicándolas correctamente en la escritura, análisis y nomenclatura de compuestos orgánicos.</strong></em></span></p>
+<hr />
+<p></p></div><div class="iDevice_buttons feedback-button js-required"><input type="button" class="feedbackbutton" value="Formas de Representación" /></div><div class="feedback js-feedback js-hidden"><div style="display: flex; align-items: center; justify-content: space-between; gap: 20px; border: 2px solid #2c3e50; border-radius: 12px; padding: 20px; box-shadow: 0 4px 12px rgba(0,0,0,0.15); margin: 20px 0;"><!-- Texto a la izquierda -->
+<div style="flex: 1; font-size: 14pt; color: #2c3e50; line-height: 1.6;">
+<p><strong>Una representación química</strong> es la manera en que se expresa, de forma simbólica o gráfica, la organización de los átomos y enlaces dentro de una molécula. Existen diferentes formas de representación que varían en su nivel de detalle:</p>
+<ul style="margin-left: 20px;">
+<li><strong>Fórmula molecular</strong>: muestra solo la cantidad de átomos de cada elemento.</li>
+<li><strong>Fórmula semidesarrollada</strong>: indica los enlaces entre carbonos y agrupa los hidrógenos.</li>
+<li><strong>Fórmula desarrollada</strong>: detalla todos los enlaces de la molécula.</li>
+<li><strong>Fórmula esquelética</strong>: simplifica la escritura, omitiendo hidrógenos y representando los carbonos como vértices.</li>
+<li><strong>Representación aromática</strong>: se usa para compuestos como el benceno, mostrando anillos con dobles enlaces conjugados o un círculo central.</li>
+</ul>
+</div>
+<!-- Imagen a la derecha -->
+<div style="flex: 1; text-align: center;"><img src="ChatGPT_Image_26_sept_2025,_09_49_11_p.m..png" alt="Tipos de representaciones químicas" style="max-width: 100%; border-radius: 10px; border: 2px solid #34495e; box-shadow: 0 4px 10px rgba(0,0,0,0.2);" width="800" height="800" /></div>
+</div></div>
+</div>
+</div>
+</div>
+</div>
+</article>
 <div id="packageLicense" class="cc cc-by-sa">
 <p><span>Obra publicada con</span> <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Licencia Creative Commons Reconocimiento Compartir igual 4.0</a></p>
 </div>
