--- a/actividades.html
+++ b/actividades.html
@@ -67,8 +67,11 @@
 <div id="main-wrapper">
 <section id="main">
 <header id="nodeDecoration"><h1 id="nodeTitle">Actividades</h1></header>
-<article class="iDevice_wrapper textIdevice" id="id51">
-<div class="iDevice emphasis0" >
+<article class="iDevice_wrapper textIdevice em_iDevice" id="id51">
+<div class="iDevice emphasis1" >
+<header class="iDevice_header iDevice_header_noIcon"><h1 class="iDeviceTitle">Hidrocarburos</h1></header>
+<div class="iDevice_inner">
+<div class="iDevice_content_wrapper">
 <div id="ta51_158_2" class="block iDevice_content">
 <div class="exe-text"><p></p>
 <style>
@@ -211,10 +214,8 @@
             p.lead {
                 font-size: 16px;
             }
-        }
-    </style>
+        }</style>
 <div class="container"><header>
-<h1>Hidrocarburos</h1>
 <p class="lead">Evalúa tus conocimientos con retroalimentación inmediata</p>
 </header>
 <div class="intro">
@@ -350,9 +351,14 @@
 </p></div>
 </div>
 </div>
+</div>
+</div>
 </article>
-<article class="iDevice_wrapper textIdevice" id="id52">
-<div class="iDevice emphasis0" >
+<article class="iDevice_wrapper textIdevice em_iDevice" id="id52">
+<div class="iDevice emphasis1" >
+<header class="iDevice_header iDevice_header_noIcon"><h1 class="iDeviceTitle">🔬 Actividad: Clasificación de hidrocarburos y tipos de enlace</h1></header>
+<div class="iDevice_inner">
+<div class="iDevice_content_wrapper">
 <div id="ta52_159_2" class="block iDevice_content">
 <div class="exe-text"><style>
   .quiz-block { margin:22px 0; padding:18px; border:1px solid #ddd; border-radius:10px; background:#fafafa; }
@@ -369,7 +375,7 @@
   .option.selected-incorrect { border:2px solid #c62828; background:#ffebee; }
 </style>
 <div class="container">
-<h2 style="text-align: center;">🔬 Actividad: Clasificación de hidrocarburos y tipos de enlace</h2>
+<h2 style="text-align: center;"></h2>
 <p>Observa cada molécula y responde:</p>
 <ol>
 <li>¿El compuesto es Saturado, Insaturado o Aromático?</li>
@@ -516,9 +522,14 @@
 </p></div>
 </div>
 </div>
+</div>
+</div>
 </article>
-<article class="iDevice_wrapper textIdevice" id="id56">
-<div class="iDevice emphasis0" >
+<article class="iDevice_wrapper textIdevice em_iDevice" id="id56">
+<div class="iDevice emphasis1" >
+<header class="iDevice_header iDevice_header_noIcon"><h1 class="iDeviceTitle">🎮 Haz clic en el juego y comienza a divertirte aprendiendo</h1></header>
+<div class="iDevice_inner">
+<div class="iDevice_content_wrapper">
 <div id="ta56_163_2" class="block iDevice_content">
 <div class="exe-text"><style>
     body {
@@ -555,15 +566,15 @@
         margin-bottom: 15px;
         font-size: 18px;
         font-weight: 500;
-    }
-</style>
-<div class="invitar">🎮 Haz clic en el juego y comienza a divertirte aprendiendo</div>
+    }</style>
 <div class="iframe-container"><iframe width="1200" height="600" style="max-width: 100%;" src="https://wordwall.net/es/embed/a87d5284505749668dfbc2cf9c816de4?themeId=1&amp;templateId=35&amp;fontStackId=0" allowfullscreen="allowfullscreen">
   </iframe></div></div><div class="iDevice_buttons feedback-button js-required"><input type="button" class="feedbackbutton" value="Quiz " /></div><div class="feedback js-feedback js-hidden"><p data-start="194" data-end="476"><em><strong>Con las actividades anteriores tuviste la oportunidad de analizar el origen de los hidrocarburos, reconocer su formación en ambientes geológicos, y reflexionar sobre sus usos en la vida cotidiana. Estos ejercicios te ayudaron a afianzar conceptos de manera práctica e interactiva.</strong></em></p>
 <p data-start="478" data-end="666"><em><strong>Ahora es momento de poner a prueba lo que aprendiste: pasa a la sección del quizz, donde encontrarás preguntas que te permitirán comprobar tu comprensión y reforzar los temas vistos.</strong></em></p>
 <p data-start="478" data-end="666" style="text-align: center;"><em><strong><a href="quiz.html"><img src="imagen_2025-09-22_135632677-removebg-preview.png" alt="" width="200" height="200" /></a><br /></strong></em></p>
 <p data-start="478" data-end="666"><em><strong> </strong></em></p>
 <p></p></div>
+</div>
+</div>
 </div>
 </div>
 </article>
