--- a/actividades1.html
+++ b/actividades1.html
@@ -133,7 +133,8 @@
 <div class="iDevice_inner">
 <div class="iDevice_content_wrapper">
 <div id="ta112_144_2" class="block iDevice_content">
-<div class="exe-text"><p><iframe width="1200" height="600" style="max-width: 100%;" src="https://wordwall.net/es/embed/1d6a6c9151014c4bbe66c4a3a59cffff?themeId=1&amp;templateId=3&amp;fontStackId=0" frameborder="0" allowfullscreen="allowfullscreen"></iframe></p></div>
+<div class="exe-text"><div style="display: flex; justify-content: center; margin: 20px 0;"><iframe width="1200" height="600" style="max-width: 100%;" src="https://wordwall.net/es/embed/1d6a6c9151014c4bbe66c4a3a59cffff?themeId=1&amp;templateId=3&amp;fontStackId=0" frameborder="0" allowfullscreen="allowfullscreen">
+  </iframe></div></div>
 </div>
 </div>
 </div>
