--- a/hidrocarburos.html
+++ b/hidrocarburos.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="content.css" />
 <link rel="stylesheet" type="text/css" href="nav.css" />
 <meta http-equiv="content-type" content="text/html;  charset=utf-8" />
-<title>Hidrocarburos | Entre carbonos y saberes v1.0 </title>
+<title>Hidrocarburos | Entre Carbonos y Saberes  </title>
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 <meta name="author" content="Daniel Ruiz Lopez" />
 <link rel="license" type="text/html" href="http://creativecommons.org/licenses/by-sa/4.0/" />
@@ -19,7 +19,7 @@
 <body class="exe-web-site" id="exe-node-1"><script type="text/javascript">document.body.className+=" js"</script>
 <div id="content">
 <p id="skipNav"><a href="#main" class="sr-av">Saltar la navegación</a></p>
-<header id="header" ><div id="headerContent">Entre carbonos y saberes v1.0</div></header>
+<header id="header" ><div id="headerContent">Entre Carbonos y Saberes </div></header>
 <nav id="siteNav">
 <ul>
    <li><a href="index.html" class="daddy main-node">Introducción</a></li>
