--- a/materiales1.html
+++ b/materiales1.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="content.css" />
 <link rel="stylesheet" type="text/css" href="nav.css" />
 <meta http-equiv="content-type" content="text/html;  charset=utf-8" />
-<title>Materiales | Entre carbonos y saberes v1.0 </title>
+<title>Materiales | Entre Carbonos y Saberes  </title>
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 <meta name="author" content="Daniel Ruiz Lopez" />
 <link rel="license" type="text/html" href="http://creativecommons.org/licenses/by-sa/4.0/" />
@@ -19,7 +19,7 @@
 <body class="exe-web-site" id="exe-node-13"><script type="text/javascript">document.body.className+=" js"</script>
 <div id="content">
 <p id="skipNav"><a href="#main" class="sr-av">Saltar la navegación</a></p>
-<header id="header" ><div id="headerContent">Entre carbonos y saberes v1.0</div></header>
+<header id="header" ><div id="headerContent">Entre Carbonos y Saberes </div></header>
 <nav id="siteNav">
 <ul>
    <li><a href="index.html" class="daddy main-node">Introducción</a></li>
@@ -67,21 +67,9 @@
 <div id="main-wrapper">
 <section id="main">
 <header id="nodeDecoration"><h1 id="nodeTitle">Materiales</h1></header>
-<article class="iDevice_wrapper textIdevice em_iDevice" id="id68">
-<div class="iDevice emphasis1" >
-<header class="iDevice_header iDevice_header_noIcon"><h1 class="iDeviceTitle">Videos. infografias documentos y demas material</h1></header>
-<div class="iDevice_inner">
-<div class="iDevice_content_wrapper">
-<div id="ta68_175_2" class="block iDevice_content">
-<div class="exe-text"><p><br />PARA FORTALECER CONCEPTOS AL ESTUDIANTE O ABORDAR MAS A DETALLE TEMATICA</p></div>
-</div>
-</div>
-</div>
-</div>
-</article>
 <article class="iDevice_wrapper textIdevice em_iDevice em_iDevice_exit_black" id="id132">
 <div class="iDevice emphasis1" >
-<header class="iDevice_header" style="background-image:url(icon_exit_black.png)"><span class="iDeviceTitle">&nbsp;</span></header>
+<header class="iDevice_header" style="background-image:url(icon_exit_black.png)"><h1 class="iDeviceTitle">Linea de tiempo </h1></header>
 <div class="iDevice_inner">
 <div class="iDevice_content_wrapper">
 <div id="ta132_132_2" class="block iDevice_content">
