--- a/foro.html
+++ b/foro.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="content.css" />
 <link rel="stylesheet" type="text/css" href="nav.css" />
 <meta http-equiv="content-type" content="text/html;  charset=utf-8" />
-<title>Materiales | Entre carbonos y saberes </title>
+<title>Foro | Entre carbonos y saberes </title>
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 <meta name="author" content="Daniel Ruiz Lopez" />
 <link rel="license" type="text/html" href="http://creativecommons.org/licenses/by-sa/4.0/" />
@@ -16,7 +16,7 @@
 <script type="text/javascript" src="common.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
-<body class="exe-web-site" id="exe-node-17"><script type="text/javascript">document.body.className+=" js"</script>
+<body class="exe-web-site" id="exe-node-4"><script type="text/javascript">document.body.className+=" js"</script>
 <div id="content">
 <p id="skipNav"><a href="#main" class="sr-av">Saltar la navegación</a></p>
 <header id="header" ><div id="headerContent">Entre carbonos y saberes</div></header>
@@ -44,9 +44,9 @@
       <li><a href="evaluacin_final.html" class="no-ch">Evaluación final</a></li>
    </ul>
    </li>
-   <li class="current-page-parent"><a href="foro.html" class="current-page-parent daddy">Foro</a>
+   <li id="active"><a href="foro.html" class="active daddy">Foro</a>
    <ul>
-      <li id="active"><a href="materiales2.html" class="active no-ch">Materiales</a></li>
+      <li><a href="materiales2.html" class="no-ch">Materiales</a></li>
       <li><a href="actividad.html" class="no-ch">Actividad</a></li>
    </ul>
    </li>
@@ -60,28 +60,27 @@
 </nav>
 <div id='topPagination'>
 <nav class="pagination noprt">
-<a href="foro.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="actividad.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="evaluacin_final.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="materiales2.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </nav>
 </div>
 <div id="main-wrapper">
 <section id="main">
-<header id="nodeDecoration"><h1 id="nodeTitle">Materiales</h1></header>
-<article class="iDevice_wrapper textIdevice em_iDevice" id="id64">
+<header id="nodeDecoration"><h1 id="nodeTitle">Foro</h1></header>
+<article class="iDevice_wrapper textIdevice em_iDevice" id="id65">
 <div class="iDevice emphasis1" >
-<header class="iDevice_header iDevice_header_noIcon"><h1 class="iDeviceTitle">Videos. infografias documentos y demas material</h1></header>
+<header class="iDevice_header iDevice_header_noIcon"><h1 class="iDeviceTitle">PRESENTACION DE LA TEMATICA </h1></header>
 <div class="iDevice_inner">
 <div class="iDevice_content_wrapper">
-<div id="ta64_171_2" class="block iDevice_content">
-<div class="exe-text"><p>ARTS DE LECTURA PARA EL DEBATE </p>
-<p></p></div>
+<div id="ta65_172_2" class="block iDevice_content">
+<div class="exe-text"><p>PARA DEBATE BREVE INTRODUCCIÓN, PAUTAS PARA EL DEBATE  Y VIDEO </p></div>
 </div>
 </div>
 </div>
 </div>
 </article>
-<article class="iDevice_wrapper textIdevice" id="id153">
+<article class="iDevice_wrapper textIdevice" id="id152">
 <div class="iDevice emphasis0" >
-<div id="ta153_150_2" class="block iDevice_content">
+<div id="ta152_149_2" class="block iDevice_content">
 <div class="exe-text"><p></p>
 <style>
         .chemistry-background-light {
@@ -515,7 +514,7 @@
 </div>
 <div id='bottomPagination'>
 <nav class="pagination noprt">
-<a href="foro.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="actividad.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="evaluacin_final.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="materiales2.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </nav>
 </div>
 <footer id="siteFooter">Daniel Ruiz Lopez, Lauren Gonzalez y Lorena Laiton 
