--- a/quiz.html
+++ b/quiz.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="content.css" />
 <link rel="stylesheet" type="text/css" href="nav.css" />
 <meta http-equiv="content-type" content="text/html;  charset=utf-8" />
-<title>Quiz | Entre Carbonos y Saberes  </title>
+<title>Quiz | Entre carbonos y saberes </title>
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 <meta name="author" content="Daniel Ruiz Lopez" />
 <link rel="license" type="text/html" href="http://creativecommons.org/licenses/by-sa/4.0/" />
@@ -19,10 +19,10 @@
 <body class="exe-web-site" id="exe-node-31"><script type="text/javascript">document.body.className+=" js"</script>
 <div id="content">
 <p id="skipNav"><a href="#main" class="sr-av">Saltar la navegación</a></p>
-<header id="header" ><div id="headerContent">Entre Carbonos y Saberes </div></header>
+<header id="header" ><div id="headerContent">Entre carbonos y saberes</div></header>
 <nav id="siteNav">
 <ul>
-   <li><a href="index.html" class="daddy main-node">Introducción</a></li>
+   <li><a href="index.html" class="daddy main-node">Inicio</a></li>
    <li class="current-page-parent"><a href="hidrocarburos.html" class="current-page-parent daddy">Hidrocarburos</a>
    <ul>
       <li><a href="materiales.html" class="no-ch">Materiales</a></li>
@@ -44,7 +44,7 @@
       <li><a href="evaluacin_final.html" class="no-ch">Evaluación final</a></li>
    </ul>
    </li>
-   <li><a href="hidrocarburos_en_la_vida_cotidiana_e_industria.html" class="daddy">Hidrocarburos en la vida cotidiana e industria</a>
+   <li><a href="foro.html" class="daddy">Foro</a>
    <ul class="other-section">
       <li><a href="materiales2.html" class="no-ch">Materiales</a></li>
       <li><a href="actividad.html" class="no-ch">Actividad</a></li>
@@ -56,7 +56,6 @@
       <li><a href="actividad0.html" class="no-ch">Actividad</a></li>
    </ul>
    </li>
-   <li><a href="asistente_virtual.html" class="no-ch">Asistente Virtual</a></li>
 </ul>
 </nav>
 <div id='topPagination'>
