--- a/evaluacin_final.html
+++ b/evaluacin_final.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="content.css" />
 <link rel="stylesheet" type="text/css" href="nav.css" />
 <meta http-equiv="content-type" content="text/html;  charset=utf-8" />
-<title>Evaluación final | Entre Carbonos y Saberes  </title>
+<title>Evaluación final | Entre carbonos y saberes </title>
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 <meta name="author" content="Daniel Ruiz Lopez" />
 <link rel="license" type="text/html" href="http://creativecommons.org/licenses/by-sa/4.0/" />
@@ -19,10 +19,10 @@
 <body class="exe-web-site" id="exe-node-16"><script type="text/javascript">document.body.className+=" js"</script>
 <div id="content">
 <p id="skipNav"><a href="#main" class="sr-av">Saltar la navegación</a></p>
-<header id="header" ><div id="headerContent">Entre Carbonos y Saberes </div></header>
+<header id="header" ><div id="headerContent">Entre carbonos y saberes</div></header>
 <nav id="siteNav">
 <ul>
-   <li><a href="index.html" class="daddy main-node">Introducción</a></li>
+   <li><a href="index.html" class="daddy main-node">Inicio</a></li>
    <li><a href="hidrocarburos.html" class="daddy">Hidrocarburos</a>
    <ul class="other-section">
       <li><a href="materiales.html" class="no-ch">Materiales</a></li>
@@ -44,7 +44,7 @@
       <li id="active"><a href="evaluacin_final.html" class="active no-ch">Evaluación final</a></li>
    </ul>
    </li>
-   <li><a href="hidrocarburos_en_la_vida_cotidiana_e_industria.html" class="daddy">Hidrocarburos en la vida cotidiana e industria</a>
+   <li><a href="foro.html" class="daddy">Foro</a>
    <ul class="other-section">
       <li><a href="materiales2.html" class="no-ch">Materiales</a></li>
       <li><a href="actividad.html" class="no-ch">Actividad</a></li>
@@ -56,12 +56,11 @@
       <li><a href="actividad0.html" class="no-ch">Actividad</a></li>
    </ul>
    </li>
-   <li><a href="asistente_virtual.html" class="no-ch">Asistente Virtual</a></li>
 </ul>
 </nav>
 <div id='topPagination'>
 <nav class="pagination noprt">
-<a href="actividades1.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="hidrocarburos_en_la_vida_cotidiana_e_industria.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="actividades1.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="foro.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </nav>
 </div>
 <div id="main-wrapper">
@@ -1183,7 +1182,7 @@ function getAnswer()
 </div>
 <div id='bottomPagination'>
 <nav class="pagination noprt">
-<a href="actividades1.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="hidrocarburos_en_la_vida_cotidiana_e_industria.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="actividades1.html" class="prev"><span><span>&laquo; </span>Anterior</span></a> <span class="sep">| </span><a href="foro.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </nav>
 </div>
 <footer id="siteFooter">Daniel Ruiz Lopez, Lauren Gonzalez y Lorena Laiton 
