--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="content.css" />
 <link rel="stylesheet" type="text/css" href="nav.css" />
 <meta http-equiv="content-type" content="text/html;  charset=utf-8" />
-<title>Entre Carbonos y Saberes  </title>
+<title>Entre carbonos y saberes </title>
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 <meta name="author" content="Daniel Ruiz Lopez" />
 <link rel="license" type="text/html" href="http://creativecommons.org/licenses/by-sa/4.0/" />
@@ -22,10 +22,10 @@
 <body class="exe-web-site" id="exe-node-0"><script type="text/javascript">document.body.className+=" js"</script>
 <div id="content">
 <p id="skipNav"><a href="#main" class="sr-av">Saltar la navegación</a></p>
-<header id="header" ><div id="headerContent">Entre Carbonos y Saberes </div></header>
+<header id="header" ><div id="headerContent">Entre carbonos y saberes</div></header>
 <nav id="siteNav">
 <ul>
-   <li id="active"><a href="index.html" class="active daddy main-node">Introducción</a></li>
+   <li id="active"><a href="index.html" class="active daddy main-node">Inicio</a></li>
    <li><a href="hidrocarburos.html" class="daddy">Hidrocarburos</a>
    <ul class="other-section">
       <li><a href="materiales.html" class="no-ch">Materiales</a></li>
@@ -47,7 +47,7 @@
       <li><a href="evaluacin_final.html" class="no-ch">Evaluación final</a></li>
    </ul>
    </li>
-   <li><a href="hidrocarburos_en_la_vida_cotidiana_e_industria.html" class="daddy">Hidrocarburos en la vida cotidiana e industria</a>
+   <li><a href="foro.html" class="daddy">Foro</a>
    <ul class="other-section">
       <li><a href="materiales2.html" class="no-ch">Materiales</a></li>
       <li><a href="actividad.html" class="no-ch">Actividad</a></li>
@@ -59,7 +59,6 @@
       <li><a href="actividad0.html" class="no-ch">Actividad</a></li>
    </ul>
    </li>
-   <li><a href="asistente_virtual.html" class="no-ch">Asistente Virtual</a></li>
 </ul>
 </nav>
 <div id='topPagination'>
@@ -69,16 +68,27 @@
 </div>
 <div id="main-wrapper">
 <section id="main">
-<header id="nodeDecoration"><h1 id="nodeTitle">Introducción</h1></header>
+<header id="nodeDecoration"><h1 id="nodeTitle">Inicio</h1></header>
+<article class="iDevice_wrapper interactive-videoIdevice em_iDevice em_iDevice_media_black" id="id76">
+<div class="iDevice emphasis1" >
+<header class="iDevice_header" style="background-image:url(icon_media_black.png)"><h1 class="iDeviceTitle">El Origen de los Hidrocarburos</h1></header>
+<div class="iDevice_inner">
+<div class="iDevice_content_wrapper">
+<div id="ta76_127_2" class="block iDevice_content">
+			<div class="exe-interactive-video">				<p id="exe-interactive-video-file" class="js-hidden">					<a href="https://www.youtube.com/watch?v=mMhiFnPx3ic&t=2s">com/watch?v=mMhiFnPx3ic&t=2s</a>				</p>				<script type="text/javascript">//<![CDATA[					
+var InteractiveVideo = {"slides":[{"type":"cloze","text":"<p>En ambientes acuáticos tranquilos como fiordos, bahías y lagos se acumularon restos <span style=\"text-decoration: line-through;\">orgánicos</span> de organismos muertos</p>","startTime":71},{"type":"cloze","text":"<p>La presión y la <span style=\"text-decoration: line-through;\">temperatura</span> fueron clave para transformar la materia orgánica en hidrocarburos.</p>","startTime":134},{"type":"cloze","text":"<p>El <span style=\"text-decoration: line-through;\">gas</span> y el <span style=\"text-decoration: line-through;\">petróleo</span> quedaron atrapados en trampas geológicas</p>","startTime":232},{"type":"singleChoice","question":"<p><strong><em>Pregunta de reflexión</em> </strong> El video explica que el fracking es parte del desarrollo no convencional. Aunque no se mencionan los impactos, ¿cuáles de estos podrían estar asociados?</p>","answers":[["Contaminación de aguas subterráneas",0],["Sismos inducidos",0],["Conflictos sociales por uso de recursos",0],["Todas las anteriores",1]],"startTime":266},{"type":"dropdown","text":"<p><em><strong>Pregunta de reflexión  </strong></em>Además de generar energía eléctrica y combustibles, los hidrocarburos tienen otros usos importantes. Completa el texto seleccionando la opción correcta.</p>\n<p>Los hidrocarburos se utilizan en la fabricación de <span style=\"text-decoration: line-through;\">plásticos</span>  (bolsas, botellas, envases), en la producción de <span style=\"text-decoration: line-through;\">medicinas</span>, en la elaboración de <span style=\"text-decoration: line-through;\">fertilizantes</span> para el campo y también en productos  como las <span style=\"text-decoration: line-through;\">pinturas</span>  (esmaltes y recubrimientos) y en los <span style=\"text-decoration: line-through;\">cosméticos</span><em><br /></em></p>","startTime":312,"additionalWords":["plásticos","medicinas","fertilizantes","pinturas","cosméticos","metales"]}],"i18n":{"start":"Inicio","results":"Resultados","slide":"Diapositiva (fotograma)","score":"Puntuación","seen":"Visto","total":"Total","seeAll":"debe ver todo el contenido y contestar a las preguntas","noSlides":"El vídeo no tiene contenidos interactivos.","goOn":"Continuar","error":"Error","dataError":"Código no compatible","onlyOne":"Sólo un vídeo interactivo por página.","cover":"Portada","fsWarning":"Salga del modo pantalla completa (tecla Esc) para ver la diapositiva","right":"¡Correcto!","wrong":"Incorrecto","sortableListInstructions":"Pinche y arrastre o use las flechas.","up":"Subir","down":"Bajar","rightAnswer":"Respuesta correcta:","notAnswered":"Por favor termine la actividad","check":"Comprobar","newWindow":"Ventana nueva","msgOnlySaveAuto":"Su puntuación se guardará después de cada pregunta. Sólo puede jugar una vez.","msgSaveAuto":"Su puntuación se guardará automáticamente después de cada pregunta.","msgYouScore":"Su puntuación","msgScoreScorm":"La puntuación no se puede guardar porque esta página no forma parte  de un paquete SCORM.","msgYouLastScore":"La última puntuación guardada es","msgActityComply":"Ya ha realizado esta actividad.","msgPlaySeveralTimes":"Puede realizar esta actividad cuantas veces quiera","msgEndGameScore":"Antes de guardar la puntuación comience la partida.","msgSeveralScore":"Puede guardar la puntuación tantas veces como quiera","msgOnlySaveScore":"¡Sólo puede guardar la puntuación una vez!","msgOnlySave":"Sólo puede guardar una vez","msgUncompletedActivity":"Actividad no completada","msgSuccessfulActivity":"Actividad superada. Puntuación: %s","msgUnsuccessfulActivity":"Actividad no superada. Puntuación: %s","msgTypeGame":"Vídeo interactivo"},"scorm":{"isScorm":0,"textButtonScorm":"Guardar la puntuación","repeatActivity":false},"scoreNIA":false,"evaluation":false,"evaluationID":"","ideviceID":"2025922164618360","title":"El Origen de los Hidrocarburos. por Instituto Argentino de Gas y Petróleo","description":"<div style=\"border: 2px solid #f1c40f; background-color: #fff8dc; padding: 15px; border-radius: 10px; font-family: Arial, sans-serif;\">\n<p style=\"text-align: center; font-size: 20px; font-weight: bold; color: #2c3e50; margin-bottom: 10px;\">🎬 INSTRUCCIONES</p>\n<ol style=\"color: #2c3e50; font-size: 16px; line-height: 1.6;\">\n<li>Mira el video con atención.</li>\n<li>Responde las preguntas que aparecerán en los momentos señalados.</li>\n</ol>\n<p style=\"background-color: #f9e79f; border: 1px dashed #f39c12; padding: 10px; border-radius: 8px; font-size: 15px; color: #7d6608; margin-top: 15px; text-align: center;\">⚠️ <strong>No pongas el video en pantalla completa</strong>, ya que podrías perder la interacción con las preguntas.</p>\n<p style=\"background-color: #d6eaf8; border: 1px dashed #2980b9; padding: 10px; border-radius: 8px; font-size: 14px; color: #1b4f72; margin-top: 15px;\">📒 <em>Recuerda: algunas palabras de las preguntas llevan tilde. Presta atención a la ortografía al responder.</em></p>\n</div>","coverType":"text"}				//]]></script>			</div>
+</div>
+</div>
+</div>
+</div>
+</article>
 <article class="iDevice_wrapper textIdevice em_iDevice" id="id5">
 <div class="iDevice emphasis1" >
 <header class="iDevice_header iDevice_header_noIcon"><h1 class="iDeviceTitle">Objetivo General</h1></header>
 <div class="iDevice_inner">
 <div class="iDevice_content_wrapper">
 <div id="ta5_128_2" class="block iDevice_content">
-<div class="exe-text"><hr />
-<p style="text-align: center;"><span style="font-size: 14pt;"><em><strong>Fortalecer en los estudiantes la comprensión, formulación y nomenclatura de hidrocarburos, desarrollando competencias científicas y críticas para analizar su papel en la vida cotidiana, la industria y el medio ambiente.</strong></em></span></p>
-<hr />
+<div class="exe-text"><p style="text-align: center;"><span style="font-size: 14pt;"><em><strong>Fortalecer en los estudiantes la comprensión, formulación y nomenclatura de hidrocarburos, desarrollando competencias científicas y críticas para analizar su papel en la vida cotidiana, la industria y el medio ambiente.</strong></em></span></p>
 <p style="text-align: center;"><span style="font-size: 14pt;"><em><strong><a href="hidrocarburos.html" title="Inicio">Introducción a los Hidrocarburos</a></strong></em></span></p></div><div class="iDevice_buttons feedback-button js-required"><input type="button" class="feedbackbutton" value="Objetivos Específicos" /></div><div class="feedback js-feedback js-hidden"><p></p>
 <p></p>
 <ul>
@@ -96,19 +106,6 @@
 </li>
 </ul>
 <p></p></div>
-</div>
-</div>
-</div>
-</div>
-</article>
-<article class="iDevice_wrapper interactive-videoIdevice em_iDevice em_iDevice_media_black" id="id76">
-<div class="iDevice emphasis1" >
-<header class="iDevice_header" style="background-image:url(icon_media_black.png)"><h1 class="iDeviceTitle">El Origen de los Hidrocarburos</h1></header>
-<div class="iDevice_inner">
-<div class="iDevice_content_wrapper">
-<div id="ta76_127_2" class="block iDevice_content">
-			<div class="exe-interactive-video">				<p id="exe-interactive-video-file" class="js-hidden">					<a href="https://www.youtube.com/watch?v=mMhiFnPx3ic&t=2s">com/watch?v=mMhiFnPx3ic&t=2s</a>				</p>				<script type="text/javascript">//<![CDATA[					
-var InteractiveVideo = {"slides":[{"type":"cloze","text":"<p>En ambientes acuáticos tranquilos como fiordos, bahías y lagos se acumularon restos <span style=\"text-decoration: line-through;\">orgánicos</span> de organismos muertos</p>","startTime":71},{"type":"cloze","text":"<p>La presión y la <span style=\"text-decoration: line-through;\">temperatura</span> fueron clave para transformar la materia orgánica en hidrocarburos.</p>","startTime":134},{"type":"cloze","text":"<p>El <span style=\"text-decoration: line-through;\">gas</span> y el <span style=\"text-decoration: line-through;\">petróleo</span> quedaron atrapados en trampas geológicas</p>","startTime":232},{"type":"singleChoice","question":"<p><strong><em>Pregunta de reflexión</em> </strong> El video explica que el fracking es parte del desarrollo no convencional. Aunque no se mencionan los impactos, ¿cuáles de estos podrían estar asociados?</p>","answers":[["Contaminación de aguas subterráneas",0],["Sismos inducidos",0],["Conflictos sociales por uso de recursos",0],["Todas las anteriores",1]],"startTime":266},{"type":"dropdown","text":"<p><em><strong>Pregunta de reflexión  </strong></em>Además de generar energía eléctrica y combustibles, los hidrocarburos tienen otros usos importantes. Completa el texto seleccionando la opción correcta.</p>\n<p>Los hidrocarburos se utilizan en la fabricación de <span style=\"text-decoration: line-through;\">plásticos</span>  (bolsas, botellas, envases), en la producción de <span style=\"text-decoration: line-through;\">medicinas</span>, en la elaboración de <span style=\"text-decoration: line-through;\">fertilizantes</span> para el campo y también en productos  como las <span style=\"text-decoration: line-through;\">pinturas</span>  (esmaltes y recubrimientos) y en los <span style=\"text-decoration: line-through;\">cosméticos</span><em><br /></em></p>","startTime":312,"additionalWords":["plásticos","medicinas","fertilizantes","pinturas","cosméticos","metales"]}],"i18n":{"start":"Inicio","results":"Resultados","slide":"Diapositiva (fotograma)","score":"Puntuación","seen":"Visto","total":"Total","seeAll":"debe ver todo el contenido y contestar a las preguntas","noSlides":"El vídeo no tiene contenidos interactivos.","goOn":"Continuar","error":"Error","dataError":"Código no compatible","onlyOne":"Sólo un vídeo interactivo por página.","cover":"Portada","fsWarning":"Salga del modo pantalla completa (tecla Esc) para ver la diapositiva","right":"¡Correcto!","wrong":"Incorrecto","sortableListInstructions":"Pinche y arrastre o use las flechas.","up":"Subir","down":"Bajar","rightAnswer":"Respuesta correcta:","notAnswered":"Por favor termine la actividad","check":"Comprobar","newWindow":"Ventana nueva","msgOnlySaveAuto":"Su puntuación se guardará después de cada pregunta. Sólo puede jugar una vez.","msgSaveAuto":"Su puntuación se guardará automáticamente después de cada pregunta.","msgYouScore":"Su puntuación","msgScoreScorm":"La puntuación no se puede guardar porque esta página no forma parte  de un paquete SCORM.","msgYouLastScore":"La última puntuación guardada es","msgActityComply":"Ya ha realizado esta actividad.","msgPlaySeveralTimes":"Puede realizar esta actividad cuantas veces quiera","msgEndGameScore":"Antes de guardar la puntuación comience la partida.","msgSeveralScore":"Puede guardar la puntuación tantas veces como quiera","msgOnlySaveScore":"¡Sólo puede guardar la puntuación una vez!","msgOnlySave":"Sólo puede guardar una vez","msgUncompletedActivity":"Actividad no completada","msgSuccessfulActivity":"Actividad superada. Puntuación: %s","msgUnsuccessfulActivity":"Actividad no superada. Puntuación: %s","msgTypeGame":"Vídeo interactivo"},"scorm":{"isScorm":0,"textButtonScorm":"Guardar la puntuación","repeatActivity":false},"scoreNIA":false,"evaluation":false,"evaluationID":"","ideviceID":"2025922164618360","title":"El Origen de los Hidrocarburos. por Instituto Argentino de Gas y Petróleo","description":"<div style=\"border: 2px solid #f1c40f; background-color: #fff8dc; padding: 15px; border-radius: 10px; font-family: Arial, sans-serif;\">\n<p style=\"text-align: center; font-size: 20px; font-weight: bold; color: #2c3e50; margin-bottom: 10px;\">🎬 INSTRUCCIONES</p>\n<ol style=\"color: #2c3e50; font-size: 16px; line-height: 1.6;\">\n<li>Mira el video con atención.</li>\n<li>Responde las preguntas que aparecerán en los momentos señalados.</li>\n</ol>\n<p style=\"background-color: #f9e79f; border: 1px dashed #f39c12; padding: 10px; border-radius: 8px; font-size: 15px; color: #7d6608; margin-top: 15px; text-align: center;\">⚠️ <strong>No pongas el video en pantalla completa</strong>, ya que podrías perder la interacción con las preguntas.</p>\n<p style=\"background-color: #d6eaf8; border: 1px dashed #2980b9; padding: 10px; border-radius: 8px; font-size: 14px; color: #1b4f72; margin-top: 15px;\">📒 <em>Recuerda: algunas palabras de las preguntas llevan tilde. Presta atención a la ortografía al responder.</em></p>\n</div>","coverType":"text"}				//]]></script>			</div>
 </div>
 </div>
 </div>
